--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ installed to list all available ITxPT inventory services. The default output is 
 
 * avahi-daemon disable for IPv6
 
-_Note:_To make the script available as bash command use a symbolic link. Within the repository folder execute the following command.
+_Note:_To make the script available as bash command use a symbolic link. Within the repository folder execute the following command:
 [,shell]
 ----
 sudo ln -s $(pwd)/lsinv.sh /usr/local/bin/lsinv
